<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/lb_background"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/myTextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_1"
        >
    </TextView>

    <TextView
        android:id="@+id/myTextView02"
        android:background="@color/lb_tv_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        >
    </TextView>


    <TextView
        style="@style/DavidStyleText1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/str_text_view1"
        />

    <TextView
        style="@style/DavidStyleText2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/str_text_view2"
        />
</LinearLayout>
